# ENSC-251-project

./: .gitignore  README.md  main.cpp  stu_sort.cpp  student.hpp
FinalProject/: CMakeLists.txt  Final.txt  Interm.txt  Makefile  international-stu.txt  list.cpp  list.hpp  main.cpp  stu_sort.cpp  stu_sort.hpp  student.cpp  student.hpp  temp.cpp  toeflscore.cpp  toeflscore.hpp  validCheck.cpp  validCheck.hpp
IntermProject/: CMakeLists.txt  Interm Project Process  Makefile  main.cpp  notebook.txt  stu_sort.cpp  stu_sort.hpp  student.cpp  student.hpp
